Fixing the output token name for Compose outputs and few other fixes (#1218)
* Updating node upstream nodes when topology changes (add/move/delete)

* Adding support for workflow parameters and its integration

* Adding workflow parameters panel

* Add Exports to fix build

* Fixing loading token metadata for dynamic parameters

* Fixing bugs

* Fixing toggle collapse panel

* Fixing tests

* Adding outputs token display for keys generated by designer

Co-authored-by: Priti Sambandam <psamband@microsoft.com>
Co-authored-by: Travis Harris <travisharris@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -219,6 +219,7 @@
   "BBD8Em": "Key",
   "BCAnZP": "Either a single format specifier character or a custom format pattern that indicates how to format the value of this timestamp. If format is not provided, the ISO 8601 format ('o') is used.",
   "BHe7qY": "Required. The URI encoded string.",
+  "BJNUxN": "Path Parameters",
   "BKL0ZG": "Start time",
   "BQCPY7": "Required. The string to decode the URL-unsafe characters from.",
   "BQSRV0": "Enter password as plain text or use a secure parameter",
@@ -384,6 +385,7 @@
   "MnThTq": "Insert function",
   "N0pS6Y": "Target schema",
   "N2CF0J": "Required. The key name of the form data values to return.",
+  "N4dEVo": "Headers",
   "NPUFgH": "Status",
   "NeyUAh": "(UTC-03:00) City of Buenos Aires",
   "NkUgXU": "(UTC+03:00) Minsk",
@@ -575,6 +577,7 @@
   "YfwZJO": "Search Tips",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
+  "ZCFMoe": "Body",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
   "ZM1mRy": "Concurrency Control",
   "ZME5hh": "Returns the day of month component of a string timestamp",
@@ -806,6 +809,7 @@
   "_BBD8Em.comment": "A placeholder for the dictionary key",
   "_BCAnZP.comment": "Optional string parameter to identify format of timestamp returned",
   "_BHe7qY.comment": "Required URI encoded string parameter to be converted using uriComponentToString function",
+  "_BJNUxN.comment": "Display name for relative path parameters in trigger outputs",
   "_BKL0ZG.comment": "Column header text for start time",
   "_BQCPY7.comment": "Required string parameter to be decoded using decodeUriComponent function",
   "_BQSRV0.comment": "Basic Password Placeholder Text",
@@ -971,6 +975,7 @@
   "_MnThTq.comment": "Message to insert function",
   "_N0pS6Y.comment": "Target schema",
   "_N2CF0J.comment": "Required string parameter to be used as key for triggerFormDataMultiValues function",
+  "_N4dEVo.comment": "Display name for headers in outputs",
   "_NPUFgH.comment": "Label text for retry status",
   "_NeyUAh.comment": "Timezone value ",
   "_NkUgXU.comment": "Timezone value ",
@@ -1162,6 +1167,7 @@
   "_YfwZJO.comment": "Search tip header label",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
+  "_ZCFMoe.comment": "Display name for body outputs",
   "_Z9PWl/.comment": "error message for invalid retry count",
   "_ZM1mRy.comment": "title for concurrency setting",
   "_ZME5hh.comment": "Label for description of custom dayOfMonth Function",
@@ -1392,6 +1398,7 @@
   "_o2Cmny.comment": "Error validation message",
   "_o3SfI4.comment": "Label to fit the whole canvas in view",
   "_oAFcW6.comment": "Required string parameter to be decoded using decodeDataUri function",
+  "_oDHXKh.comment": "Display name for item output",
   "_oLtwMw.comment": "title for content transfer setting",
   "_oM6q96.comment": "Text for the Browse Operations page navigation heading",
   "_oRvVIW.comment": "Timezone value ",
@@ -1506,6 +1513,7 @@
   "_vEBhDX.comment": "Label for description of custom lastIndexOf Function",
   "_vQcQkU.comment": "Required text parameter to search endsWith function with",
   "_vSlNPe.comment": "Delete text",
+  "_vT0DCP.comment": "Display name for operation outputs",
   "_vVJuus.comment": "invalid expression alert",
   "_vX9WYS.comment": "Audience Label Display Name",
   "_vXwYXe.comment": "Timezone value ",
@@ -1518,6 +1526,7 @@
   "_vrYqUF.comment": "Label for button to allow user to create custom value in combobox",
   "_vwH/XV.comment": "Create Parameter Text",
   "_vz2gZC.comment": "Header text for workflow properties",
+  "_w16qh+.comment": "Display name for queries in outputs",
   "_w5Hhig.comment": "Day of the week",
   "_wEaGWn.comment": "Label for description of custom subtractFromTime Function",
   "_wF7C+h.comment": "Button to cancel a connection",
@@ -1537,6 +1546,7 @@
   "_wzEneQ.comment": "Close",
   "_x+6ccf.comment": "Day of the week",
   "_x0or2o.comment": "Required collection parameter to apply length Function",
+  "_x10E1p.comment": "Display name for status code in outputs",
   "_xFQXAI.comment": "Button text for the control-Z button combination to undo the last action",
   "_xJ6vjn.comment": "Label for description of custom uriComponentToString Function",
   "_xLF2Zr.comment": "Button to add row",
@@ -1798,6 +1808,7 @@
   "o2Cmny": "Enter a valid uri.",
   "o3SfI4": "Zoom to fit",
   "oAFcW6": "Required. The dataURI to decode into a binary representation.",
+  "oDHXKh": "Item",
   "oLtwMw": "Content Transfer",
   "oM6q96": "Browse Operations",
   "oRvVIW": "(UTC+07:00) Krasnoyarsk",
@@ -1912,6 +1923,7 @@
   "vEBhDX": "Returns the last index of a value within a string (case-insensitive, invariant culture)",
   "vQcQkU": "Required. The value the string may end with.",
   "vSlNPe": "Delete",
+  "vT0DCP": "Outputs",
   "vVJuus": "The expression is invalid.",
   "vX9WYS": "Audience",
   "vXwYXe": "(UTC+06:00) Astana",
@@ -1924,6 +1936,7 @@
   "vrYqUF": "Enter custom value",
   "vwH/XV": "Create parameter",
   "vz2gZC": "Workflow Properties",
+  "w16qh+": "Queries",
   "w5Hhig": "Sunday",
   "wEaGWn": "Subtracts an integer number of a specified unit of time from a string timestamp passed in",
   "wF7C+h": "Cancel",
@@ -1943,6 +1956,7 @@
   "wzEneQ": "Close",
   "x+6ccf": "Wednesday",
   "x0or2o": "Required. The collection for which to get the length.",
+  "x10E1p": "Status Code",
   "xFQXAI": "Ctrl + Z",
   "xJ6vjn": "Returns a string representation of a URI encoded string",
   "xLF2Zr": "Add Row",
