[DM] Update WarningModal to FluentV9 Dialog (#1219)
Update WarningModal to FluentV9 Dialog

Co-authored-by: Nicolas Layne <nicolaslayne@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -112,7 +112,6 @@
   "3vCCY7": "Required. The number of a specified time unit to subtract.",
   "3vqfeV": "3",
   "4/kJ8D": "(UTC+04:00) Yerevan",
-  "438H98": "Discard changes",
   "45ubha": "Authentication",
   "47kOXr": "Required. The lowest integer that can be returned.",
   "4BrA0z": "Required. The number of days to add. Can be negative to subtract days.",
@@ -467,7 +466,6 @@
   "RZO5Ic": "Add or replace your schemas.",
   "RhH4pF": "{minutes, plural, one {# minute} other {# minutes}}",
   "RkgScy": "6",
-  "Rno87I": "Do you want to discard all unsaved changes?",
   "S8P4N5": "Delete",
   "SADSSs": "(UTC+12:00) Petropavlovsk-Kamchatsky - Old",
   "SCCE6s": "Password",
@@ -577,8 +575,8 @@
   "YfwZJO": "Search Tips",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
-  "ZCFMoe": "Body",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
+  "ZCFMoe": "Body",
   "ZM1mRy": "Concurrency Control",
   "ZME5hh": "Returns the day of month component of a string timestamp",
   "ZQ4lji": "(UTC+10:00) Canberra, Melbourne, Sydney",
@@ -702,7 +700,6 @@
   "_3vCCY7.comment": "Required integer parameter to subtract to time",
   "_3vqfeV.comment": "Hour of the day",
   "_4/kJ8D.comment": "Timezone value ",
-  "_438H98.comment": "Header text for discard modal",
   "_45ubha.comment": "Authentication Label Display Name",
   "_47kOXr.comment": "Required integer parameter to be used as lower bound for rand function",
   "_4BrA0z.comment": "Required integer parameter to subtract days from time",
@@ -1057,7 +1054,6 @@
   "_RZO5Ic.comment": "Label to inform the ability to replace schemas",
   "_RhH4pF.comment": "A duration of time shown in minutes",
   "_RkgScy.comment": "Hour of the day",
-  "_Rno87I.comment": "Discard warning text",
   "_S8P4N5.comment": "type and label to delete a value",
   "_SADSSs.comment": "Timezone value ",
   "_SCCE6s.comment": "Basic Password Label Display Name",
@@ -1167,8 +1163,8 @@
   "_YfwZJO.comment": "Search tip header label",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
-  "_ZCFMoe.comment": "Display name for body outputs",
   "_Z9PWl/.comment": "error message for invalid retry count",
+  "_ZCFMoe.comment": "Display name for body outputs",
   "_ZM1mRy.comment": "title for concurrency setting",
   "_ZME5hh.comment": "Label for description of custom dayOfMonth Function",
   "_ZQ4lji.comment": "Timezone value ",
@@ -1214,6 +1210,7 @@
   "_cJm+ah.comment": "Required text parameter to search nthIndexOf function with",
   "_cK2A/V.comment": "Text for view docs button",
   "_cP4UkW.comment": "error message for invalid retry interval",
+  "_cR9RtV.comment": "Title for discard modal",
   "_cT2MlP.comment": "Timezone value ",
   "_cVIZTQ.comment": "Timezone value ",
   "_cgq/+y.comment": "Placehodler text for dropdown",
@@ -1403,6 +1400,7 @@
   "_oM6q96.comment": "Text for the Browse Operations page navigation heading",
   "_oRvVIW.comment": "Timezone value ",
   "_oV0xQ9.comment": "Placeholder text for workflow overview filter input",
+  "_oVVPst.comment": "Discard warning message",
   "_odQ554.comment": "Response body for test map API",
   "_ol+TkT.comment": "Timezone value ",
   "_oxH1L/.comment": "Timezone value ",
@@ -1624,6 +1622,7 @@
   "cJm+ah": "Required. The value to search the index of.",
   "cK2A/V": "View Documentation",
   "cP4UkW": "Retry Policy interval is invalid, must match ISO 8601 duration format",
+  "cR9RtV": "Discard changes",
   "cT2MlP": "(UTC+11:00) Chokurdakh",
   "cVIZTQ": "(UTC+02:00) Tripoli",
   "cgq/+y": "Please select an identity",
@@ -1813,6 +1812,7 @@
   "oM6q96": "Browse Operations",
   "oRvVIW": "(UTC+07:00) Krasnoyarsk",
   "oV0xQ9": "Enter the run identifier to open the run",
+  "oVVPst": "Do you want to discard all unsaved changes?",
   "odQ554": "Response body",
   "ol+TkT": "(UTC-03:00) Salvador",
   "oxH1L/": "(UTC-07:00) Chihuahua, La Paz, Mazatlan",
