Copy update - function output

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1499,6 +1499,7 @@
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
   "_uczA5c.comment": "Required text parameter to search startsWith function on",
   "_udNlco.comment": "Timezone value ",
+  "_uesaee.comment": "Expression",
   "_ui7GCl.comment": "Hour of the day",
   "_unMaeV.comment": "Heading section for Variable tokens",
   "_urAHv1.comment": "Hour of the day",
@@ -1911,6 +1912,7 @@
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
   "uczA5c": "Required. The string that may contain the value.",
   "udNlco": "(UTC-11:00) Coordinated Universal Time-11",
+  "uesaee": "Expression",
   "ui7GCl": "16",
   "unMaeV": "Variables",
   "urAHv1": "4",
