Copy update - clear custom value tooltip

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -216,6 +216,7 @@
   "BAgRzO": "(UTC-08:00) Coordinated Universal Time-08",
   "BBD8Em": "Key",
   "BCAnZP": "Either a single format specifier character or a custom format pattern that indicates how to format the value of this timestamp. If format is not provided, the ISO 8601 format ('o') is used.",
+  "BEZWxB": "Clear custom value",
   "BHe7qY": "Required. The URI encoded string.",
   "BJNUxN": "Path Parameters",
   "BKL0ZG": "Start time",
@@ -803,6 +804,7 @@
   "_BAgRzO.comment": "Timezone value ",
   "_BBD8Em.comment": "A placeholder for the dictionary key",
   "_BCAnZP.comment": "Optional string parameter to identify format of timestamp returned",
+  "_BEZWxB.comment": "Tooltip content for clearing custom value",
   "_BHe7qY.comment": "Required URI encoded string parameter to be converted using uriComponentToString function",
   "_BJNUxN.comment": "Display name for relative path parameters in trigger outputs",
   "_BKL0ZG.comment": "Column header text for start time",
@@ -1380,7 +1382,6 @@
   "_n7wxxN.comment": "Search tip 2",
   "_nGds/r.comment": "Required object parameter to compare to in greaterOrEqual function",
   "_nHseED.comment": "Required integer parameter to see how far in the future",
-  "_nQxMfu.comment": "Tooltip content for clearing custom value",
   "_nSan4V.comment": "Reset",
   "_nTA155.comment": "Required string parameter to identify which property to remove",
   "_nZ4nLn.comment": "title for suppress workflow headers setting",
@@ -1793,7 +1794,6 @@
   "n7wxxN": "Try less specific keywords.",
   "nGds/r": "Required. The object to check if it is less than or equal to value being compared to.",
   "nHseED": "Required. The number of time units the desired time is in the future.",
-  "nQxMfu": "Clear custom value and reselect",
   "nSan4V": "Reset",
   "nTA155": "Required. The name of the property to remove.",
   "nZ4nLn": "Suppress workflow headers",
