--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -197,6 +197,7 @@
   "9pdXmX": "(UTC+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna",
   "9pl7QP": "(UTC-04:00) Atlantic Time (Canada)",
   "9u/Ae3": "Returns true if both parameters are true",
+  "A5Ferh": "Source element removed from view.",
   "ADM1Z8": "Authentication Type",
   "AHB418": "Filter Actions",
   "AIL7WX": "(UTC+02:00) Gaza, Hebron",
@@ -213,9 +214,11 @@
   "B/JzwK": "{actionCount, plural, one {# Action} =0 {0 Actions} other {# Actions}}",
   "B2s0iG": "Required. The index of the part to retrieve.",
   "B59BCg": "No dynamic content available",
+  "B999mz": "Line deleted.",
   "BAgRzO": "(UTC-08:00) Coordinated Universal Time-08",
   "BBD8Em": "Key",
   "BCAnZP": "Either a single format specifier character or a custom format pattern that indicates how to format the value of this timestamp. If format is not provided, the ISO 8601 format ('o') is used.",
+  "BEZWxB": "Clear custom value",
   "BHe7qY": "Required. The URI encoded string.",
   "BJNUxN": "Path Parameters",
   "BKL0ZG": "Start time",
@@ -230,7 +233,6 @@
   "C4NQ1J": "Retrieve items to meet the specified threshold by following the continuation token. Due to connector's page size, the number returned may exceed the threshold.",
   "CG772M": "Connection required",
   "Ciol6I": "Output",
-  "CkfIxl": "Source node removed from view.",
   "ClZW2r": "Value",
   "CsPY74": "Credential Type",
   "Cy9qeQ": "(UTC+02:00) Helsinki, Kyiv, Riga, Sofia, Tallinn, Vilnius",
@@ -298,6 +300,7 @@
   "GzQQqH": "Array",
   "H17jEE": "URI parsing functions",
   "H1wnHr": "Required. The string to slice.",
+  "H5VikC": "Invalid connection, mapping must not form a closed loop.",
   "H8bEUn": "Required. The number that Subtrahend is removed from.",
   "HDqP2g": "Required. The key name of the form data value to return.",
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
@@ -387,11 +390,9 @@
   "NPUFgH": "Status",
   "NeyUAh": "(UTC-03:00) City of Buenos Aires",
   "NkUgXU": "(UTC+03:00) Minsk",
-  "Nn/DN4": "This connection would introduce circular logic.",
   "NnD8gF": "Invalid operation path input value. Path value - {pathValue} Path template - {pathTemplate}",
   "No6CS+": "Enter tenant",
   "NoXs0l": "Please select an identity",
-  "NtY1mD": "Remove all references to node ' {nodeName} ' before you remove the node.",
   "NvANon": "(UTC-09:00) Alaska",
   "NvJDn/": "Tuesday",
   "NvmZVi": "Runtime",
@@ -784,6 +785,7 @@
   "_9pdXmX.comment": "Timezone value ",
   "_9pl7QP.comment": "Timezone value ",
   "_9u/Ae3.comment": "Label for description of custom and Function",
+  "_A5Ferh.comment": "Message on removing source node",
   "_ADM1Z8.comment": "Label for Authentication Type dropdown",
   "_AHB418.comment": "Filter Actions",
   "_AIL7WX.comment": "Timezone value ",
@@ -800,9 +802,11 @@
   "_B/JzwK.comment": "This is the number of actions to be completed in a group",
   "_B2s0iG.comment": "Required number parameter to be used as index for triggerMultipartBody function",
   "_B59BCg.comment": "Header for no dynamic content available card section",
+  "_B999mz.comment": "Message on deleting connection",
   "_BAgRzO.comment": "Timezone value ",
   "_BBD8Em.comment": "A placeholder for the dictionary key",
   "_BCAnZP.comment": "Optional string parameter to identify format of timestamp returned",
+  "_BEZWxB.comment": "Tooltip content for clearing custom value",
   "_BHe7qY.comment": "Required URI encoded string parameter to be converted using uriComponentToString function",
   "_BJNUxN.comment": "Display name for relative path parameters in trigger outputs",
   "_BKL0ZG.comment": "Column header text for start time",
@@ -817,7 +821,6 @@
   "_C4NQ1J.comment": "description for pagination setting",
   "_CG772M.comment": "This is for a label for a badge, it is used for screen readers and not shown on the screen.",
   "_Ciol6I.comment": "Output",
-  "_CkfIxl.comment": "Message on removing source node",
   "_ClZW2r.comment": "Parameter Field Value Title",
   "_CsPY74.comment": "Authentication OAuth Type Label",
   "_Cy9qeQ.comment": "Timezone value ",
@@ -885,6 +888,7 @@
   "_GzQQqH.comment": "This is an option in a dropdown where users can select type Array for their parameter.",
   "_H17jEE.comment": "Label for URI parsing functions",
   "_H1wnHr.comment": "Required string parameter to slice",
+  "_H5VikC.comment": "Error message for circular logic connection validation",
   "_H8bEUn.comment": "Required number parameter to be minused in sub function",
   "_HDqP2g.comment": "Required string parameter to be used as key for triggerFormDataValue function",
   "_HJIZrG.comment": "Diagnostics information on error message",
@@ -974,11 +978,9 @@
   "_NPUFgH.comment": "Label text for retry status",
   "_NeyUAh.comment": "Timezone value ",
   "_NkUgXU.comment": "Timezone value ",
-  "_Nn/DN4.comment": "Error message for circular logic connection validation",
   "_NnD8gF.comment": "Error message while parsing ",
   "_No6CS+.comment": "Tenant Placeholder Text",
   "_NoXs0l.comment": "MSI Identity Placeholder Text",
-  "_NtY1mD.comment": "Message on failure to remove source node",
   "_NvANon.comment": "Timezone value ",
   "_NvJDn/.comment": "Day of the week",
   "_NvmZVi.comment": "Filter by runtime header",
@@ -1220,7 +1222,6 @@
   "_cscezV.comment": "Required collection parameter to apply skip function on",
   "_d3bSQA.comment": "Text to tell users to click to delete comments",
   "_d4xMIx.comment": "Timezone value ",
-  "_dA6SUc.comment": "Message on deleting connection",
   "_dDYCuU.comment": "Link text to open URL",
   "_dOpdsP.comment": "Update Expression",
   "_dSTRb/.comment": "description of content transfer setting",
@@ -1353,6 +1354,7 @@
   "_lZT0JI.comment": "Button to add group",
   "_lcVG4C.comment": "skipped run",
   "_lcxLiq.comment": "Error Message for Invalid Array",
+  "_lexzgJ.comment": "Message on failure to remove source node",
   "_lgs5sf.comment": "label text for stateless run mode",
   "_ljAOR6.comment": "Label for description of custom body Function",
   "_m7Y6Qf.comment": "Title for a tab panel",
@@ -1380,7 +1382,6 @@
   "_n7wxxN.comment": "Search tip 2",
   "_nGds/r.comment": "Required object parameter to compare to in greaterOrEqual function",
   "_nHseED.comment": "Required integer parameter to see how far in the future",
-  "_nQxMfu.comment": "Tooltip content for clearing custom value",
   "_nSan4V.comment": "Reset",
   "_nTA155.comment": "Required string parameter to identify which property to remove",
   "_nZ4nLn.comment": "title for suppress workflow headers setting",
@@ -1499,6 +1500,7 @@
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
   "_uczA5c.comment": "Required text parameter to search startsWith function on",
   "_udNlco.comment": "Timezone value ",
+  "_uesaee.comment": "Expression",
   "_ui7GCl.comment": "Hour of the day",
   "_unMaeV.comment": "Heading section for Variable tokens",
   "_urAHv1.comment": "Hour of the day",
@@ -1632,7 +1634,6 @@
   "cscezV": "Required. The collection to skip the first Count objects from.",
   "d3bSQA": "Delete comment",
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
-  "dA6SUc": "Connection deleted.",
   "dDYCuU": "Learn more",
   "dOpdsP": "Update",
   "dSTRb/": "Specify the behavior and capabilities for transferring content over HTTP. Large messages may be split up into smaller requests to the connector to allow large message upload. Details can be found at http://aka.ms/logicapps-chunk#upload-content-in-chunks",
@@ -1765,6 +1766,7 @@
   "lZT0JI": "Add Group",
   "lcVG4C": "is skipped",
   "lcxLiq": "Please enter a valid array",
+  "lexzgJ": "Remove all references to element ' {nodeName} ' before you remove the element.",
   "lgs5sf": "Stateless run mode:",
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
   "m7Y6Qf": "Testing",
@@ -1792,7 +1794,6 @@
   "n7wxxN": "Try less specific keywords.",
   "nGds/r": "Required. The object to check if it is less than or equal to value being compared to.",
   "nHseED": "Required. The number of time units the desired time is in the future.",
-  "nQxMfu": "Clear custom value and reselect",
   "nSan4V": "Reset",
   "nTA155": "Required. The name of the property to remove.",
   "nZ4nLn": "Suppress workflow headers",
@@ -1911,6 +1912,7 @@
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
   "uczA5c": "Required. The string that may contain the value.",
   "udNlco": "(UTC-11:00) Coordinated Universal Time-11",
+  "uesaee": "Expression",
   "ui7GCl": "16",
   "unMaeV": "Variables",
   "urAHv1": "4",
