--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1310,6 +1310,7 @@
   "_idQjOP.comment": "Label for properties tab",
   "_iq+tiv.comment": "Hour of the day",
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
+  "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
   "_iy8rNf.comment": "Button text for running test",
   "_j1VU25.comment": "Timezone value ",
   "_j2MU0b.comment": "Label for description of custom removeProperty Function",
@@ -1722,6 +1723,7 @@
   "idQjOP": "Properties",
   "iq+tiv": "11",
   "iql+jn": "{seconds}s",
+  "isnFBi": "Elements and mappings not connected to a target element are removed.",
   "iy8rNf": "Test",
   "j1VU25": "(UTC+14:00) Kiritimati Island",
   "j2MU0b": "Returns an object with a property removed",
