Update toast notification - implement varied autoHideDurations, add info icon, and add Undo action

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -114,6 +114,7 @@
   "45ubha": "Authentication",
   "47kOXr": "Required. The lowest integer that can be returned.",
   "4BrA0z": "Required. The number of days to add. Can be negative to subtract days.",
+  "4Ekn9t": "Undo",
   "4IS4yp": "Retry Policy",
   "4Q7WzU": "Add a new connection",
   "4XdZNj": "(UTC+01:00) West Central Africa",
@@ -702,6 +703,7 @@
   "_45ubha.comment": "Authentication Label Display Name",
   "_47kOXr.comment": "Required integer parameter to be used as lower bound for rand function",
   "_4BrA0z.comment": "Required integer parameter to subtract days from time",
+  "_4Ekn9t.comment": "Undo",
   "_4IS4yp.comment": "title for retry policy setting",
   "_4Q7WzU.comment": "Aria label description for add button",
   "_4XdZNj.comment": "Timezone value ",
