--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -459,7 +459,6 @@
   "QrQDdp": "Required. A string containing the unit of time specified in the interval to subtract.",
   "Qu1HkA": "{hours}h",
   "Qy0Kha": "Triggers cannot be deleted.",
-  "R7v2iQ": "A line between array elements is automatically created to indicate looping elements.",
   "RFjYpH": "Name",
   "RPSKbr": "Enter audience",
   "RX2Shm": "Required. The string that is split.",
@@ -1048,7 +1047,6 @@
   "_QrQDdp.comment": "Required string parameter to represent the unit of time",
   "_Qu1HkA.comment": "This is a period in time in hours. {hours} is replaced by the number and h is an abbreviation of hours",
   "_Qy0Kha.comment": "Text to explain that triggers cannot be deleted",
-  "_R7v2iQ.comment": "Describes connection being added",
   "_RFjYpH.comment": "Name of current node",
   "_RPSKbr.comment": "Audience Placeholder Text",
   "_RX2Shm.comment": "Required text parameter to apply split function on",
@@ -1353,6 +1351,7 @@
   "_lFve22.comment": "Timezone value ",
   "_lIPWQ6.comment": "Timezone value ",
   "_lPTdSf.comment": "Button text for run trigger",
+  "_lQNKUB.comment": "Describes connection being added",
   "_lV77P8.comment": "Type Title",
   "_lZT0JI.comment": "Button to add group",
   "_lcVG4C.comment": "skipped run",
@@ -1766,6 +1765,7 @@
   "lFve22": "(UTC+01:00) Sarajevo, Skopje, Warsaw, Zagreb",
   "lIPWQ6": "(UTC+07:00) Bangkok, Hanoi, Jakarta",
   "lPTdSf": "Run trigger",
+  "lQNKUB": "A line for the parent element is added automatically.",
   "lV77P8": "Title",
   "lZT0JI": "Add Group",
   "lcVG4C": "is skipped",
