--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -519,6 +519,7 @@
   "VA7M1u": "In App",
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
   "VI5Sa8": "Expand",
+  "VJa7sh": "Browse operations",
   "VKAk5g": "The provided workflow run name is not valid.",
   "VL9wOu": "Must provide value for parameter.",
   "VLc3FV": "Source schema",
@@ -1106,6 +1107,7 @@
   "_VA7M1u.comment": "\"In App\" category name",
   "_VE3cxq.comment": "Timezone value ",
   "_VI5Sa8.comment": "Label to expand",
+  "_VJa7sh.comment": "Text for the Browse operations page navigation heading",
   "_VKAk5g.comment": "Message text for an invalid run ID",
   "_VL9wOu.comment": "Error message when the workflow parameter value is empty.",
   "_VLc3FV.comment": "Source schema",
@@ -1396,7 +1398,6 @@
   "_oAFcW6.comment": "Required string parameter to be decoded using decodeDataUri function",
   "_oDHXKh.comment": "Display name for item output",
   "_oLtwMw.comment": "title for content transfer setting",
-  "_oM6q96.comment": "Text for the Browse Operations page navigation heading",
   "_oRvVIW.comment": "Timezone value ",
   "_oV0xQ9.comment": "Placeholder text for workflow overview filter input",
   "_oVVPst.comment": "Discard warning message",
@@ -1810,7 +1811,6 @@
   "oAFcW6": "Required. The dataURI to decode into a binary representation.",
   "oDHXKh": "Item",
   "oLtwMw": "Content Transfer",
-  "oM6q96": "Browse Operations",
   "oRvVIW": "(UTC+07:00) Krasnoyarsk",
   "oV0xQ9": "Enter the run identifier to open the run",
   "oVVPst": "Do you want to discard all unsaved changes?",
