Operation Badge Cleanup (#1259)
* A couple UI fixes

* Added a couple more ui fixes

Co-authored-by: Riley Evans <rileyevans@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -317,7 +317,6 @@
   "IUE/lQ": "(UTC-01:00) Cabo Verde Is.",
   "IW2MjQ": "Converts a string timestamp passed in from a UTC to a target time zone",
   "IXy91L": "Add a target schema",
-  "IgNz8Y": "Action",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
   "IlY1Lj": "Return to browse",
   "IooQu1": "Advanced options",
@@ -520,6 +519,7 @@
   "VA7M1u": "In App",
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
   "VI5Sa8": "Expand",
+  "VJa7sh": "Browse operations",
   "VKAk5g": "The provided workflow run name is not valid.",
   "VL9wOu": "Must provide value for parameter.",
   "VLc3FV": "Source schema",
@@ -905,7 +905,6 @@
   "_IUE/lQ.comment": "Timezone value ",
   "_IW2MjQ.comment": "Label for description of custom convertFromUtc Function",
   "_IXy91L.comment": "label to inform to add a target schema to be used",
-  "_IgNz8Y.comment": "Badge showing an action is a logic apps action",
   "_IjZFjQ.comment": "Timezone value ",
   "_IlY1Lj.comment": "Text for the Search Operations page navigation heading",
   "_IooQu1.comment": "Advanced options",
@@ -1108,6 +1107,7 @@
   "_VA7M1u.comment": "\"In App\" category name",
   "_VE3cxq.comment": "Timezone value ",
   "_VI5Sa8.comment": "Label to expand",
+  "_VJa7sh.comment": "Text for the Browse operations page navigation heading",
   "_VKAk5g.comment": "Message text for an invalid run ID",
   "_VL9wOu.comment": "Error message when the workflow parameter value is empty.",
   "_VLc3FV.comment": "Source schema",
@@ -1398,7 +1398,6 @@
   "_oAFcW6.comment": "Required string parameter to be decoded using decodeDataUri function",
   "_oDHXKh.comment": "Display name for item output",
   "_oLtwMw.comment": "title for content transfer setting",
-  "_oM6q96.comment": "Text for the Browse Operations page navigation heading",
   "_oRvVIW.comment": "Timezone value ",
   "_oV0xQ9.comment": "Placeholder text for workflow overview filter input",
   "_oVVPst.comment": "Discard warning message",
@@ -1812,7 +1811,6 @@
   "oAFcW6": "Required. The dataURI to decode into a binary representation.",
   "oDHXKh": "Item",
   "oLtwMw": "Content Transfer",
-  "oM6q96": "Browse Operations",
   "oRvVIW": "(UTC+07:00) Krasnoyarsk",
   "oV0xQ9": "Enter the run identifier to open the run",
   "oVVPst": "Do you want to discard all unsaved changes?",
