Dont show source nodes handle when drawing a connection from that node

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -295,6 +295,7 @@
   "GcG0qf": "Returns true if the parameters are false",
   "GdGm4T": "More commands",
   "Gi72X5": "See Less",
+  "Gi7czD": "Source schema element",
   "Gmya+V": "Not available",
   "GreYWQ": "Enter parameter name.",
   "GtDOFg": "Cancel the selection",
@@ -426,7 +427,6 @@
   "PBvR9Q": "(UTC-03:00) Araguaina",
   "PF87Ew": "Succeeded",
   "PKMkb/": "Required. The number to add to Summand 1.",
-  "PMMNKR": "Source schema node",
   "PP63jY": "more panels",
   "PQOiAc": "Collapse",
   "PRnqYA": "Required. The number of seconds to add. Can be negative to subtract seconds.",
@@ -500,6 +500,7 @@
   "TqPfth": "(UTC+01:00) Brussels, Copenhagen, Madrid, Paris",
   "Twfck/": "Required. The number to multiply Multiplicand 1 with.",
   "Tz5jTR": "Collapse/Expand",
+  "U086AA": "Target schema element",
   "U1NiVg": "(UTC-06:00) Central America",
   "U3guPp": "Group by Connector",
   "U3iWVd": "Generates an array of integers starting from a certain number",
@@ -883,6 +884,7 @@
   "_GcG0qf.comment": "Label for description of custom not Function",
   "_GdGm4T.comment": "Label for commands in row",
   "_Gi72X5.comment": "Click to view less token options",
+  "_Gi7czD.comment": "Label for source schema node",
   "_Gmya+V.comment": "Display text for when About content is not available",
   "_GreYWQ.comment": "Parameter Field Name Description",
   "_GtDOFg.comment": "Aria label description for cancel button",
@@ -1014,7 +1016,6 @@
   "_PBvR9Q.comment": "Timezone value ",
   "_PF87Ew.comment": "This is a status message to be shown in a monitoring view",
   "_PKMkb/.comment": "Required number parameter to be summed in add function",
-  "_PMMNKR.comment": "Label for source schema node",
   "_PP63jY.comment": "This is a label to access the overflowed panels",
   "_PQOiAc.comment": "An accessible label for collapse toggle icon",
   "_PRnqYA.comment": "Required integer parameter to subtract seconds from time",
@@ -1088,6 +1089,7 @@
   "_TqPfth.comment": "Timezone value ",
   "_Twfck/.comment": "Required number parameter to be multiplied in mul function",
   "_Tz5jTR.comment": "Text of Tooltip to collapse and expand",
+  "_U086AA.comment": "Label for target schema node",
   "_U1NiVg.comment": "Timezone value ",
   "_U3guPp.comment": "Label for the checkbox to group results by connector",
   "_U3iWVd.comment": "Label for description of custom range Function",
@@ -1580,7 +1582,6 @@
   "_zNesUZ.comment": "description of retry policy setting",
   "_zTKAc9.comment": "Select Actions",
   "_zUgja+.comment": "Label for button to clear the editor",
-  "_zUs2yb.comment": "Label for target schema node",
   "_zbtUQ/.comment": "Timezone value ",
   "_zcZpHT.comment": "Label for description of custom parseDateTime Function",
   "_zggBvC.comment": "Timezone value ",
@@ -1993,7 +1994,6 @@
   "zNesUZ": "A retry policy applies to intermittent failures, characterized as HTTP status codes 408, 429, and 5xx, in addition to any connectivity exceptions. The default is an exponential interval policy set to retry 4 times.",
   "zTKAc9": "Select Actions",
   "zUgja+": "Clear custom value",
-  "zUs2yb": "Target schema node",
   "zbtUQ/": "(UTC+08:30) Pyongyang",
   "zcZpHT": "Converts a string, with optionally a locale and a format to a date",
   "zggBvC": "(UTC+03:00) Nairobi",
