Added conditionally hidden parameters to the parameters tab

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -311,6 +311,7 @@
   "HfrUId": "Please select a card to see the content",
   "HoQiVa": "Enter a valid datetime.",
   "HsO1Rd": "{addIcon} Install Gateway",
+  "Hyp0Ao": "Remove parameter \"{parameterName}\" and its value",
   "HzS2gJ": "Dynamic content not supported as properties in authentication.",
   "IA+Ogm": "22",
   "IPbBB2": "(UTC+12:00) Fiji",
@@ -900,6 +901,7 @@
   "_HfrUId.comment": "Empty Panel Content Message",
   "_HoQiVa.comment": "Error validation message",
   "_HsO1Rd.comment": "Option to install a new gateway, links to new page",
+  "_Hyp0Ao.comment": "Tooltip for remove parameter button",
   "_HzS2gJ.comment": "Error message for when putting token in authentication property",
   "_IA+Ogm.comment": "Hour of the day",
   "_IPbBB2.comment": "Timezone value ",
