Added toast when attempting to delete target node

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -150,6 +150,7 @@
   "6oqk+A": "Previous",
   "6pd1bE": "(UTC-07:00) Arizona",
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
+  "6rL+R7": "Target Schema element cannot be deleted",
   "73iM9+": "Update source schema",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
@@ -740,6 +741,7 @@
   "_6oqk+A.comment": "Text of a button to go to previous page",
   "_6pd1bE.comment": "Timezone value ",
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
+  "_6rL+R7.comment": "Message informing that target element cannot be removed",
   "_73iM9+.comment": "Header to update source schema",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
