--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -150,7 +150,6 @@
   "6oqk+A": "Previous",
   "6pd1bE": "(UTC-07:00) Arizona",
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
-  "6rL+R7": "Target Schema element cannot be deleted",
   "73iM9+": "Update source schema",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
@@ -329,6 +328,7 @@
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
   "J9wWry": "Parameters",
+  "JEbHcz": "Target schema element cannot be deleted",
   "JErLDT": "Delete",
   "JNQHws": "Required. A string that contains the time.",
   "JSfWJ0": "Required. The value that is converted to a boolean.",
@@ -741,7 +741,6 @@
   "_6oqk+A.comment": "Text of a button to go to previous page",
   "_6pd1bE.comment": "Timezone value ",
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
-  "_6rL+R7.comment": "Message informing that target element cannot be removed",
   "_73iM9+.comment": "Header to update source schema",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
@@ -920,6 +919,7 @@
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
   "_J9wWry.comment": "Heading section for Parameter tokens",
+  "_JEbHcz.comment": "Message informing that target element cannot be removed",
   "_JErLDT.comment": "Delete label",
   "_JNQHws.comment": "Required string parameter that contains the time",
   "_JSfWJ0.comment": "Required parameter to be converted using bool function",
