--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -328,7 +328,6 @@
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
   "J9wWry": "Parameters",
-  "JEbHcz": "Target schema element cannot be deleted",
   "JErLDT": "Delete",
   "JNQHws": "Required. A string that contains the time.",
   "JSfWJ0": "Required. The value that is converted to a boolean.",
@@ -559,6 +558,7 @@
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
   "XbtEq9": "Count",
+  "Xj0Gr/": "Target schema element cannot be deleted.",
   "XkBxv5": "Select a target schema",
   "Xnn0uj": "Request",
   "XqamWZ": "Delete",
@@ -919,7 +919,6 @@
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
   "_J9wWry.comment": "Heading section for Parameter tokens",
-  "_JEbHcz.comment": "Message informing that target element cannot be removed",
   "_JErLDT.comment": "Delete label",
   "_JNQHws.comment": "Required string parameter that contains the time",
   "_JSfWJ0.comment": "Required parameter to be converted using bool function",
@@ -1150,6 +1149,7 @@
   "_XX1ioe.comment": "Timezone value ",
   "_XaS4ds.comment": "Timezone value ",
   "_XbtEq9.comment": "title for retry count setting",
+  "_Xj0Gr/.comment": "Message informing that target element cannot be removed",
   "_XkBxv5.comment": "Target schema dropdown placeholder",
   "_Xnn0uj.comment": "Header text for request",
   "_XqamWZ.comment": "Label of Delete Token Button",
