Added toast when attempting to delete target node (#1302)
* Added toast when attempting to delete target node

* text edit

* text edit

Co-authored-by: Joaquim Malcampo <jmalcampo@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -558,6 +558,7 @@
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
   "XbtEq9": "Count",
+  "Xj0Gr/": "Target schema element cannot be deleted.",
   "XkBxv5": "Select a target schema",
   "Xnn0uj": "Request",
   "XqamWZ": "Delete",
@@ -1148,6 +1149,7 @@
   "_XX1ioe.comment": "Timezone value ",
   "_XaS4ds.comment": "Timezone value ",
   "_XbtEq9.comment": "title for retry count setting",
+  "_Xj0Gr/.comment": "Message informing that target element cannot be removed",
   "_XkBxv5.comment": "Target schema dropdown placeholder",
   "_Xnn0uj.comment": "Header text for request",
   "_XqamWZ.comment": "Label of Delete Token Button",
