--- a/libs/data-mapper/src/lib/docs/DMStandalone.stories.mdx
+++ b/libs/data-mapper/src/lib/docs/DMStandalone.stories.mdx
@@ -16,6 +16,7 @@ nx serve data-mapper-standalone
 
 From here (localhost:4200 in your browser), you can either:
 
+- Choose map definitions (which will auto-load its respective schema trees)
 - Choose schemas from the toolbox's dropdowns (which then loads schema data
   as what we would expect to receive from GET schemaTree)
 - Make sure you've followed all the setup steps for the VS Code extension + backend
