--- a/libs/data-mapper/src/lib/docs/DMVSCExt.stories.mdx
+++ b/libs/data-mapper/src/lib/docs/DMVSCExt.stories.mdx
@@ -33,8 +33,6 @@ In order to utilize the above file once downloaded:
 
 You're all set! See the section on usage/functionality at the bottom to help you get started!
 
-**NOTE (11/15/2022):** Data Mapper's API endpoints will be in the public workflow extension bundle soon (at which time this note will be updated to reflect that) - in the meantime, see the 'Backend Runtime Setup' instructions below
-
 ### Build (Dev/Debug)
 
 To build, run the following commands _in order_ (from the root of the repo folder):
@@ -49,7 +47,7 @@ nx build vs-code-data-mapper-react
 
 ### Run (Dev/Debug)
 
-**NOTE:** If this is your first time running the Data Mapper extension, follow the backend setup instructions below
+**NOTE:** As of 11/16/2022, Data Mapper's API endpoints are in the public workflow extension bundle, so no further action needs to be taken to utilize DM
 
 To run the VS Code extension (in debug mode):
 
@@ -57,16 +55,12 @@ To run the VS Code extension (in debug mode):
 2.  Click the 'Run and Debug' tab on the left (Activity) bar
 3.  Select 'Run Data Mapper Extension...' in the dropdown at the top, then click the 'Start debugging' icon
 
-### Backend Runtime Setup - \***\*ONLY for first time setup or new extension bundle version\*\***
+### Backend Runtime / Workflow Extension Bundle Setup
 
-1. Once the Data Mapper extension has been run, wait until you see that 'func host start' has acquired a lease in the output log.
-   This is so that the necessary path/folder get generated for us to change out the runtime. Close the VS Code window running the Data Mapper extension once this is complete.
-2. Download/Set-up the latest workflow extension bundle (https://msazure.visualstudio.com/One/_build?definitionId=161889&_a=summary&repositoryFilter=2318&branchFilter=1673047)
-   - Click the latest run -> Click 'Associated Pipelines' -> Click the latest run -> On the 'build' stage, click 'x artifacts' -> Expand the '...Windows' dropdown -> Download the '...any-any.zip'
-   - Go to `yourRootUsernameFolder/.azure-functions-core-tools/Functions/ExtensionBundles/Microsoft.Azure.Functions.ExtensionBundle.Workflows`
-   - Rename the current version folder (Ex: backup-1.1.16)
-   - Replace it with the extracted folder you just downloaded (renaming it to the same version as the one you replaced)
-3. You can now run the Data Mapper extension with its latest backend runtime!
+**NOTE:** These steps are only if you need to use a custom/dev bundle
+
+To use a custom bundle, all you have to do is add the setting `"FUNCTIONS_EXTENSIONBUNDLE_SOURCE_URI"` to your workflow's root _and_ workflow-designtime `local.settings.json` files inside `Values`
+with the value being the URI for the bundle .zip file
 
 ## Usage / Supported Functionality
 
