Nodes now show error state on canvas card

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -143,6 +143,7 @@
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
+  "6grB5C": "Invalid node settings",
   "6jiO7t": "Show run",
   "6jsWn/": "Required. The collection to search within.",
   "6kSpHL": "Required. The name of the action with a multipart response.",
@@ -309,6 +310,7 @@
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HXLutF": "Key",
   "HfrUId": "Please select a card to see the content",
+  "HmcHoE": "Error fetching manifest",
   "HoQiVa": "Enter a valid datetime.",
   "HsO1Rd": "{addIcon} Install Gateway",
   "Hyp0Ao": "Remove parameter \"{parameterName}\" and its value",
@@ -734,6 +736,7 @@
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
+  "_6grB5C.comment": "Text to explain that there are invalid settings for this node",
   "_6jiO7t.comment": "Menu item text for show run",
   "_6jsWn/.comment": "Required collection parameter to apply contains function on",
   "_6kSpHL.comment": "Required string parameter to identify action name for multipartBody function",
@@ -900,6 +903,7 @@
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HXLutF.comment": "Accessibility Label for dictionary text key field",
   "_HfrUId.comment": "Empty Panel Content Message",
+  "_HmcHoE.comment": "Error message when manifest fails to load",
   "_HoQiVa.comment": "Error validation message",
   "_HsO1Rd.comment": "Option to install a new gateway, links to new page",
   "_Hyp0Ao.comment": "Tooltip for remove parameter button",
