--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -138,6 +138,7 @@
   "5qzZMo": "Loading...",
   "5rkegy": "Delete Parameter",
   "6+RwRp": "Hybrid Connector",
+  "62Ypnr": "Error loading operation data",
   "63/zYN": "Required. The object to check if it is greater than value being compared to.",
   "65FlWi": "(UTC+08:45) Eucla",
   "6OSgRP": "Test map",
@@ -731,6 +732,7 @@
   "_5qzZMo.comment": "A message shown at the bottom of a list when the next set of data is loading",
   "_5rkegy.comment": "Delete Button Tooltip Text",
   "_6+RwRp.comment": "Resource group title",
+  "_62Ypnr.comment": "label for panel error",
   "_63/zYN.comment": "Required object parameter to compare to in less function",
   "_65FlWi.comment": "Timezone value ",
   "_6OSgRP.comment": "Test map panel header",
