prevention of parent repeating conn done

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1450,6 +1450,7 @@
   "_qnI4Y1.comment": "Required string parameter to be converted using int function",
   "_qq/bq0.comment": "Timezone value ",
   "_qrxi0L.comment": "description of asynchronous response setting",
+  "_qwn2o/.comment": "Message informing that mapping to child elements need to be deleted prior to selected one.",
   "_r1FQhf.comment": "Timezone value ",
   "_r43nMc.comment": "Button text for undo the last action",
   "_r7vZ5a.comment": "title for retry minimum interval setting",
@@ -1863,6 +1864,7 @@
   "qnI4Y1": "Required. The value that is converted to an integer.",
   "qq/bq0": "(UTC+09:00) Yakutsk",
   "qrxi0L": "Asynchronous response allows a Logic App to respond with a 202 (Accepted) to indicate the request has been accepted for processing. A location header will be provided to retrieve the final state.",
+  "qwn2o/": "Remove all mappings within source element `{nodeName}‘ first.",
   "r1FQhf": "(UTC+01:00) Windhoek",
   "r43nMc": "Undo",
   "r7vZ5a": "Minimum Interval",
